// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders a plaintext text block 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<span>Hello World!</span>",
    }
  }
/>
`;

exports[`Text renders a text block with custom styles 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<span style=\\"font-size: 48px; font-family: sans-serif; color: rgb(0, 0, 0); font-weight: 700; font-style: italic;\\">Hello World!</span>",
    }
  }
/>
`;

exports[`Text renders an empty text block 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "<span><br></span>",
    }
  }
/>
`;
